Заменен метод вывода treeset